--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Red Green Refactor</title>
-<meta name="viewport" content="width=device-width, initialscale=1.0, user-scalable=no">
+<meta name="viewport" content="width=320, maximum-scale=1">
 </meta>
 <style>
 /*.screen {
@@ -152,8 +152,8 @@ $('.video_link').click(function(e) {
 
 </script>
 <script type="text/javascript">
-	var i = 6;
-  var newLength = 6;
+	var i = 8;
+  var newLength = 8;
     /*var newLength = i +7;*/
   var data1;
   
