--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
     // Cordova is ready
     //
     function onDeviceReady() {
-        navigator.splashscreen.hide();
+        navigator.splashscreen.show();
     }
 
 
