images nad index changes added

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body {
 	transition-property: all;
 	background: red;
 	position: absolute;
-	width: 320px;
+	width: 100%;
 	/*height: 480px;*/
 	top: 0px;
 }
@@ -46,12 +46,16 @@ body {
 	transform: translate(0px, 0px);
 	transition-duration: 600ms;
 	transition-property: all;
+	position: absolute;
+	width: 100%;
+	/*height: 480px;*/
+	top: 0px;
 }
 #refactor {
 	background: blue;
 }
 .wrapper {
-	width: 320px;
+	width: 100%;
 	/*height: 1080px;*/
 	/*overflow-y: scroll;*/
 	float: left;
@@ -62,7 +66,7 @@ body {
 	position:absolute;
 }
 #list {
-	width: 320px;
+	width: 100%;
 	/*height: 1080px;*/
 	position: relative;
 	-webkit-transition-duration: 600ms;
@@ -92,7 +96,7 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 12px;
 	float:left;
-	 width:300px;
+	width:98.9%;
 }
 #list ul li a:hover {
 	display: block;
@@ -112,8 +116,13 @@ body {
 }
 
 .video_link img{ float:left; width:90px; margin-right:10px;}
-.video_link span{ float:left; width:195px;}
-.listvData li{ display:block; float:left; width:320px;}
+.video_link span{ float:left; width:94.68%;}
+.listvData li{ display:block; float:left; width:100%}
+
+.yrf_title{ width:100%; height:75px; background-color:#903;} 
+.yrf_title h1{margin:0px; padding:17px 0px; text-align:center;} 
+.btn_back a{ display:block; background-color:#000; color:#CCC; float:left; padding:5px 10px; font-family:Arial, Helvetica, sans-serif; font-size:13px; text-decoration:none; margin-top:25px; margin-left:10px;}
+.page{ width:100%; height:100%; position:absolute;}
 </style>
 <script src="cordova-2.4.0.js"></script>
 <script src="jquery-1.9.1.min.js"></script>
@@ -133,26 +142,40 @@ $(document).ready(function(e) {
 	//var changeColor = $('#list li a');
 	$('#list li a').click(function(e) {
         e.preventDefault();
-		$('#list li a').css({color:'blue',backgroundColor:'#fff'});
-		$(this).css({color:'#FFFFFF',backgroundColor:'#000'});
-		$("#list").css('transform','translate(-320px,0px)');
-		$("#red").css('transform','translate(0px,0px)');
-		$("#green").css('transform','translate(320px,0px)');
+		//$('#list li a').css({color:'blue',backgroundColor:'#fff'});
+		//$(this).css({color:'#FFFFFF',backgroundColor:'#000'});
+		$("#list").css('left','-100%');
+		$("#red").css('left','0px');
+		$("#green").css('left','100%');
     });
+
+
 
 	var WrapperDiv = $('#WrapperDiv');// main wrapper	
 	device_wid = WrapperDiv.outerWidth();	
+
+
 	
 	$('#WrapperDiv div').each(function(index, element) {
-		$(this).css('transform','translate('+ index * device_wid +'px,0px)');  
+		
+		//var calc = ;
+		$(this).css('left',(index *device_wid) + 'px');  
+		//console.log(calc);
     });
 	
 	//var WrapperDivLenght = $('#WrapperDiv div').length();
-	$('#red').click(function(e) {
+	/*$('#red').click(function(e) {
 		e.preventDefault();
-		$("#list").css('transform','translate(-640px,0px)');
-		$("#red").css('transform','translate(-320px,0px)');
-		$("#green").css('transform','translate(0px,0px)');
+		$("#list").css('left','-200%');
+		$("#red").css('left','-100%');
+		$("#green").css('left','0%');
+    });*/
+	
+	$('.btn_back').click(function(e) {
+    
+		$("#red").css('left','-100px');
+		 $("#list").css('left','0%');
+
     });
 
 
@@ -235,7 +258,11 @@ $(window).scroll(function(e) {
 
 <body>
 <div class="wrapper" style="" id="WrapperDiv">
-  <div id="list">
+
+  <div id="list" class="page">
+  <div class="yrf_title">
+  <h1>YRF</h1>
+  </div>
     <ul class="listvData">
       <li><a name="http://www.youtube.com/embed/IfS8PPtKl3c" class="video_link"  href="#red"><img src="images/thumb/1.jpg" class="ui-li-thumb"> <span>Ram Kapoor - Watch all Mere Dad Ki Maruti Videos on youtube.com</span></a></li>
       <li><a name="http://www.youtube.com/embed/iunwF9lYY_8" class="video_link"  href="#red"><img src="images/thumb/2.jpg" class="ui-li-thumb"> <span>Rhea Chakraborty - Watch all Mere Dad Ki Maruti Videos on youtube.com</span></a></li>
@@ -243,12 +270,23 @@ $(window).scroll(function(e) {
       <li><a name="http://www.youtube.com/embed/m6SNpaWnuc4" class="video_link" href="#red"><img src="images/thumb/4.jpg"> <span>Who is Nishant Dahiya? Rahul Sareen from Mujhse Fraaandship Karoge</span></a></li>
       <li><a name="http://www.youtube.com/embed/m6SNpaWnuc4" class="video_link" href="#red"><img src="images/thumb/5.jpg"> <span>Who is Nishant Dahiya? Rahul Sareen from Mujhse Fraaandship Karoge</span></a></li>
       <li><a name="http://www.youtube.com/embed/qj-pIh6nK2k" class="video_link" href="#red"><img src="images/thumb/6.jpg"> <span>Rhea and the girls enter Gollu's party in style - Scene - Luv Ka The End</span></a></li>
+      <li><a href="#red" class="video_link" name="http://www.youtube.com/embed/Om4EsWzNVOM"><img src="http://i4.ytimg.com/vi/Om4EsWzNVOM/default.jpg"> <span>Gollu Timmy answering a phone call - Scene - Luv Ka The End</span></a></li>
+      <li><a href="#red" class="video_link" name="http://www.youtube.com/embed/DD7w4zGBi78"><img src="http://i4.ytimg.com/vi/DD7w4zGBi78/default.jpg"> <span>Rhea and the girls smash Luv Nanda's car - Scene - Luv Ka The End</span></a></li>
+      <li><a href="#red" class="video_link" name="http://www.youtube.com/embed/-0hRNOqduSo"><img src="http://i4.ytimg.com/vi/-0hRNOqduSo/default.jpg"> <span>Luv's dad thinks he is gay - Scene - Luv Ka The End</span></a></li>
     </ul>
+    
   </div>
-  <div class="" id="red">
+  <div class="page" id="red">
+  <div class="yrf_title">
+  <div class="btn_back">
+  <a href="#">Back</a>
+  </div>
+  <h1>YRF</h1>
+  </div>
+  
     <iframe id="video_iframe" width="250" height="175" src="http://www.youtube.com/embed/_hsYcW3cZZE" frameborder="0" allowfullscreen></iframe>
   </div>
-  <!--<div class="" id="green">GREEN</div>--> 
+  <div class="page" id="green">GREEN</div>
   <!--<div class="screen" id="refactor">REFACTOR</div>--> 
 </div>
 <script type="text/javascript" src="http://gdata.youtube.com/feeds/users/ytube/uploads?&alt=json-in-script&format=5&callback=showMyVideos"></script>
