--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8">
 <title>Red Green Refactor</title>
-<meta name="viewport" content="width=320, maximum-scale=1">
+<meta name="viewport" content="width=device-width, initialscale=1.0, user-scalable=no">
 </meta>
 <style>
 /*.screen {
