--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ document.addEventListener("deviceready", onDeviceReady, false);
     // Cordova is ready
     //
     function onDeviceReady() {
-        navigator.splashscreen.show();
+        navigator.splashscreen.hide();
     }
 
 
