--- a/index.html
+++ b/index.html
@@ -452,11 +452,11 @@ $(window).scroll(function(e) {
 			newLength = newLength + 5;
 			console.log(newLength);
 	   		
-      		showMyVideos(data1); 
+      		//showMyVideos(data1); 
 			
 			//$('ul').listview('refresh');  
 			
-				navAnim();
+				//navAnim();
 			
 			
 		}
